c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/extra_credit/default_kw_member_name.c
// because 'default' is a keyword, we can't use it as a member name
struct s {
    int default;
};

int main(void) {
    return 0;
}